tests/paczka2/big_fuzzy/15548615.err
Error in line 8: fBG S865 I9,3
Error in line 4: fBG S33 4,3
Error in line 12: coq S33 89,4
Error in line 13: coq A726 60,6
Error in line 16: flFvcFH0 A726 81,8
Error in line 1: OsdJP S33 44,8
Error in line 19: S33 S33 49,5
Error in line 5: RoZoF S978 39,3
Error in line 31: flFvcFH0 S865 63,08
Error in line 30: flFvcFH0 A726 41,5
Error in line 20: 3HN A726 277,4
Error in line 38: OsdJÄ A726 233,4
Error in line 37: 3HN S33 22,3
Error in line 36: flFvcFH0 S33 80,9
Error in line 39: 3HN S978 9,3
Error in line 33: OsdJP A726 72,7
Error in line 46: coq S865 145,61
Error in line 51: OsdJP A726 12,3
Error in line 55: fBG S33 89,2
Error in line 60: coq S865 160,2
Error in line 65: OsdJP S865 20,7
Error in line 68: RoZoF S33 91,6
Error in line 63: fBG S865 30,2
Error in line 83: 3HN S978 44,9
Error in line 86: fBG S978 38,2
Error in line 94: flFvcFH0 S978 134,05
Error in line 90: fBG S865 96,7
Error in line 95: fBG S33 76,4
Error in line 87: 3HN A726 56,7
Error in line 105: fBG S86} 99,4
Error in line 97: OsdJP S33 42,0
Error in line 111: flFvcFH0 S978 96,85
Error in line 119: flFvcFH0 A726 55,8
Error in line 132: coq S865 91,8
Error in line 142: fBG A726 83,3
Error in line 151: OsdJP S978 66,1
Error in line 150: coq S33 64,0
Error in line 173: S33 S978 8,1
Error in line 189: 3HN S33 51,9
Error in line 192: S33 S33 106,2
Error in line 210: S33 A726 75,3
Error in line 203: coq S865 84,8
Error in line 225: S33 S33 -1,1
Error in line 228: coq S978 9,9
Error in line 224: S33 S33 92,5
Error in line 242: fBG A726 69,7
Error in line 243: fBG S978 86,2
